@@ -4,6 +4,8 @@
   * When including a file lossily force-transcode it to the output encoding
     instead of crashing to preserve as much content as possible.  Ruby Bug
     #4376 by Yui NARUSE.
+  * Work around inconsistent encoding result from String#sub!.  Related to
+    Ruby Bug #4376.
 
 === 3.5.2 / 2010-02-04
 
